2005-06-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lilycall.py (Call.open_pdfs): remove stray p.

2005-06-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lilycall.py (get_env): set FONTCONFIG_PATH, so local.conf is found.
	(check_fontconfig): set fonts.cache-1

	* LilyPond.py (TinyTinyDocument.compileMe): CallBinder: closure
	for lilycall + document callbacks.
	(TinyTinyDocument.compileMe): check need_fc_update.

	* ProcessLog.py (ProcessLogWindowController.addText): new function.
	(ProcessLogWindowController.finish): stop throbber before callback.

	* lilycall.py (Call.get_process): new function.
	(check_fontconfig): symlink /System/Library/Fonts to
	prefix/share/SystemFonts.
	(Call.get_fc_cache_process): run fc-cache.

2005-06-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* MainMenu.nib/classes.nib (Module): add Find functionality:
	use performFindPanelAction with numeric tags for menu entries.

	* LilyPond.py (TinyTinyDocument.init): init
	ProcessLogWindowController to None.

2005-06-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* LilyPond.py (google_lilypond): new function. Provide context
	sensitive help.
	(lily_version): new function
	(open_url): new function
	(TinyTinyDocument.windowControllerDidLoadNib_): 
	only load welcome if there are no other files loaded.
	(TinyTinyDocument.windowControllerDidLoadNib_): use firstStart boolean.

	* setup.py (plist): set copyright, version and credits for app. 

	* Credits.html (href): new file.

	* TinyTinyDocument.nib: switch off spell checking.

	* LilyPond.py (TinyTinyDocument.updateMySyntax): run convert-ly
	from Compile > Update Syntax.

2005-06-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Welcome-to-LilyPond-MacOS.ly: new file MacOS specific Welcome to
	LilyPond.

	* lilycall.py: move from ../

	* LilyPond.py: rename from ClickEdit.py
	(TinyTinyDocument.compileFile_): new method.
	(TinyTinyDocument.compileMe): new method. Create
	ProcessLogWindowController

2005-06-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>
