@@ -1,3 +1,8 @@
+2005-06-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lilycall.py (Call.set_gui_options): new function. Don't munge
+	paths for non GUI calls.
+ 
 2005-06-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lilycall.py (Call.open_pdfs): remove stray p.
